// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Game class return computer 1`] = `
{
  "gameboard": Gameboard {
    "attackMessage": "",
    "availableShips": [],
    "board": [
      [
        0,
        0,
        0,
      ],
      [
        0,
        0,
        0,
      ],
      [
        0,
        0,
        0,
      ],
    ],
    "isAllShipSunk": false,
    "ships": [],
    "sunkMessage": "",
    "x": 3,
    "y": 3,
  },
  "name": "computer",
}
`;

exports[`Game class return player 1`] = `
{
  "gameboard": Gameboard {
    "attackMessage": "",
    "availableShips": [],
    "board": [
      [
        0,
        0,
        0,
      ],
      [
        0,
        0,
        0,
      ],
      [
        0,
        0,
        0,
      ],
    ],
    "isAllShipSunk": false,
    "ships": [],
    "sunkMessage": "",
    "x": 3,
    "y": 3,
  },
  "name": "player",
}
`;

exports[`Game class return players 1`] = `
{
  "gameboard": Gameboard {
    "attackMessage": "",
    "availableShips": [],
    "board": [
      [
        0,
        0,
        0,
      ],
      [
        0,
        0,
        0,
      ],
      [
        0,
        0,
        0,
      ],
    ],
    "isAllShipSunk": false,
    "ships": [],
    "sunkMessage": "",
    "x": 3,
    "y": 3,
  },
  "name": "player",
}
`;
